--- a/style.css
+++ b/style.css
@@ -1,6 +1,7 @@
-html, body {
-  margin: 50;
+ body {
+  margin: 350;
   padding: 100;
+  background-color: #809f9f;
 }
 
 .button{
@@ -21,13 +22,22 @@ html, body {
 h1{
   font-family: Arial, Helvetica, sans-serif;
 }
-.container-name div {
-  display: inline-block;
-width: 24%;
 
-min-height: 50px;
-/* background-color: #eee; */
-height: auto;    
+/* *{
+  border: solid;
+} */
+
+h2{
+  font-family: Arial, Helvetica, sans-serif;
+}
+
+p{
+  font-family: Arial, Helvetica, sans-serif
+}
+
+.page-header{
+  display: flex;
+  justify-content:space-between;
 }
 
 .button:hover{
@@ -35,55 +45,83 @@ height: auto;
 }
 
 .button-home{
-  background-color: white; 
-  color: black; 
+  background-color: #809f9f; 
+  color: #06750a; 
   border: 2px solid #06750a;
+  transition-duration:0.75s;
 }
 .button-home:hover{
   background-color: #06750a; 
-  color: #ffffff;
+  color: #809f9f;
+}
+
+.on-home{
+  background-color: #06750a; 
+  color: #809f9f;
 }
 
 .button-about{
   
-  background-color: white; 
-  color: black; 
+  background-color: #809f9f; 
+  color: #771407; 
   border: 2px solid #771407;
+  transition-duration:0.75s;
 }
 
 .button-about:hover {
   background-color: #771407; 
-  color: #ffffff;
+  color: #809f9f;
+}
+
+.on-about{
+  background-color: #771407; 
+  color: #809f9f;
 }
 
 .button-events{
-  background-color: white; 
-  color: black; 
+  background-color: #809f9f; 
+  color: #1708a0; 
   border: 2px solid #1708a0;
+  transition-duration:0.75s;
 }
 
 .button-events:hover {
   background-color: #1708a0; 
-  color: #ffffff;
+  color: #809f9f;
+}
+
+.on-speech{
+  background-color: #1708a0; 
+  color: #809f9f;
 }
 
 .button-myexperience{
-  background-color: white; 
+  background-color: #809f9f; 
   color: black; 
   border: 2px solid #000000;
+  transition-duration:0.75s;
 }
 
 .button-myexperience:hover {
   background-color: #000000; 
-  color: #ffffff;
+  color: #809f9f;
+}
+
+.on-exp{
+  background-color: #000000; 
+  color: #809f9f;
+}
+
+.container {
+  
+  display: flex;
+  justify-content: space-around;
+  flex-direction: row;
+  margin-bottom: 20px;
 }
 
 
 
- .menu{
-  display: flex;
-  justify-content: flex-end;
-} 
 
 /* .school{
   display:flex;
