--- a/style.css
+++ b/style.css
@@ -40,7 +40,16 @@ p{
   justify-content:space-between;
 }
 
-.button:hover{
+.home-hint{
+  display: none;
+}
+
+.button:hover + .home-hint{
+  transition-duration: 0.75;
+  position: absolute;
+  background-color: #06750a; 
+
+  display: block;
   box-shadow: 0 12px 16px 0 rgba(0,0,0,0.24), 0 17px 50px 0 rgba(0,0,0,0.19);
 }
 
@@ -68,7 +77,13 @@ p{
   transition-duration:0.75s;
 }
 
-.button-about:hover {
+.about-hint{
+  display: none;
+}
+.button-about:hover + .about-hint {
+  position: absolute;
+  transition-duration: 0.75;
+  display: block;
   background-color: #771407; 
   color: #809f9f;
 }
@@ -78,14 +93,22 @@ p{
   color: #809f9f;
 }
 
-.button-events{
+
+.button-speech{
+  
   background-color: #809f9f; 
   color: #1708a0; 
   border: 2px solid #1708a0;
   transition-duration:0.75s;
 }
 
-.button-events:hover {
+.speech-hint{
+  display: none;
+}
+
+.button-speech:hover + .speech-hint {
+  position: absolute;
+  display: block;
   background-color: #1708a0; 
   color: #809f9f;
 }
@@ -102,7 +125,13 @@ p{
   transition-duration:0.75s;
 }
 
-.button-myexperience:hover {
+.myexperience-hint{
+  display: none;
+}
+.button-myexperience:hover + .myexperience-hint {
+  position: absolute;
+  display: block;
+  transition-duration: 0.75;
   background-color: #000000; 
   color: #809f9f;
 }
