--- a/style.css
+++ b/style.css
@@ -40,16 +40,7 @@ p{
   justify-content:space-between;
 }
 
-.home-hint{
-  display: none;
-}
-
-.button:hover + .home-hint{
-  transition-duration: 0.75;
-  position: absolute;
-  background-color: #06750a; 
-
-  display: block;
+.button:hover {
   box-shadow: 0 12px 16px 0 rgba(0,0,0,0.24), 0 17px 50px 0 rgba(0,0,0,0.19);
 }
 
@@ -59,9 +50,18 @@ p{
   border: 2px solid #06750a;
   transition-duration:0.75s;
 }
-.button-home:hover{
+
+.home-hint{
+  display: none;
+}
+
+.button-home:hover+ .home-hint{
+  position: absolute;
+  display: block;
   background-color: #06750a; 
   color: #809f9f;
+  padding: 10px;
+  border-radius: 12px;
 }
 
 .on-home{
@@ -77,15 +77,19 @@ p{
   transition-duration:0.75s;
 }
 
+
 .about-hint{
   display: none;
 }
 .button-about:hover + .about-hint {
   position: absolute;
   transition-duration: 0.75;
+  margin-left: 50px;
   display: block;
   background-color: #771407; 
   color: #809f9f;
+  padding: 10px;
+  border-radius: 12px;
 }
 
 .on-about{
@@ -108,9 +112,12 @@ p{
 
 .button-speech:hover + .speech-hint {
   position: absolute;
+  margin-left: 150px;
   display: block;
   background-color: #1708a0; 
   color: #809f9f;
+  padding: 10px;
+  border-radius: 12px;
 }
 
 .on-speech{
@@ -130,15 +137,28 @@ p{
 }
 .button-myexperience:hover + .myexperience-hint {
   position: absolute;
+  margin-left: 100px;
   display: block;
   transition-duration: 0.75;
   background-color: #000000; 
   color: #809f9f;
+  padding: 10px;
+  border-radius: 12px;
 }
 
 .on-exp{
   background-color: #000000; 
   color: #809f9f;
+}
+
+.speech{
+  
+  display: flex;
+  flex-direction: row;
+}
+
+.directorword{
+  margin-left:100;
 }
 
 .container {
